--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "^6.1.3",
     "@angular/service-worker": "^6.1.3",
     "angularfire2": "^5.0.0-rc.11",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "firebase": "^5.3.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
+    "ngx-ui-loader": "^7.2.2",
+    "popper": "^1.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
